finished semantic analysis