@@ -1,9 +1,11 @@
 package ast;
 
+import java.util.Collections;
 import java.util.List;
 
 public final class ClassType implements Type{//todo
     public final String identifier;
+    public ClassDecl origin; //to be filled in by type analyzer
 
     public ClassType(String identifier) {
         this.identifier = identifier;
@@ -11,6 +13,6 @@ public final class ClassType implements Type{//todo
 
     @Override
     public List<ASTNode> children() {
-        return List.of();
+        return Collections.emptyList();
     }
 }
